# artifacts/api-server/src/routes/index.ts
@@ -1,13 +1,11 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import categoriesRouter from "./categories";
 import transactionsRouter from "./transactions";
 import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(categoriesRouter);
 router.use(transactionsRouter);
 router.use(statsRouter);
 
